welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: ')' expected but '<-' found.
     while(i <-  nums.length){
             ^indexOfValue:12: error: illegal start of simple expression
 }
 ^